Updated copyright statement in Info.plist files

--- a/XcodeBoss Comments/Info.plist
+++ b/XcodeBoss Comments/Info.plist
@@ -44,6 +44,6 @@
 		<string>com.apple.dt.Xcode.extension.source-editor</string>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 The Evil Boss. All rights reserved.</string>
+	<string>Copyright © 2017-2020 Kim Ahlberg. All rights reserved.</string>
 </dict>
 </plist>
