--- a/XcodeBoss/Info.plist
+++ b/XcodeBoss/Info.plist
@@ -25,7 +25,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 The Evil Boss. All rights reserved.</string>
+	<string>Copyright © 2017-2020 Kim Ahlberg. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
